just one update

--- a/exclusao.html
+++ b/exclusao.html
@@ -1,11 +1,5 @@
 <?php
-
-$servidor = "localhost";
-$schema = "creditall";
-$usuario = "creditall";
-$senha = "12345678";
-
-$conexao = mysqli_connect($servidor, $usuario, $senha, $schema);
+  include 'conn.php';
 ?>
 
 <!DOCTYPE html>
@@ -27,7 +21,7 @@ $conexao = mysqli_connect($servidor, $usuario, $senha, $schema);
     <!--HEADER-->
     <div id="header">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
         </button>
