--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<?php
-
-$servidor = "localhost";
-$schema = "creditall";
-$usuario = "creditall";
-$senha = "12345678";
-
-$conexao = mysqli_connect($servidor, $usuario, $senha, $schema);
-?>
-
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -27,7 +17,7 @@ $conexao = mysqli_connect($servidor, $usuario, $senha, $schema);
     <!--HEADER-->
     <div id="header">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,7 +27,7 @@ $conexao = mysqli_connect($servidor, $usuario, $senha, $schema);
               <a class="nav-link" href="index.html">Home<span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="listar.html">Listar</a>
+              <a class="nav-link" href="listar.php">Listar</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="exclusao.html">Exclusão</a>
